# hexlet-django-blog

./: .env  Makefile  pyproject.toml
hexlet_django_blog/: settings.py  views.py
hexlet_django_blog/article/: admin.py  models.py  urls.py  views.py
hexlet_django_blog/templates/articles/: article.html
